# workato-platform-cli

./: .gitignore  .pre-commit-config.yaml  .workato-ignore  LICENSE  Makefile  README.md  openapi-config.yaml  package-lock.json  pyproject.toml  workato-api-spec.yaml
.github/workflows/: claude-code-review.yml  lint.yml  pypi.yml  test.yml
docs/: COMMAND_REFERENCE.md  DEVELOPER_GUIDE.md  INDEX.md  PERMISSIONS.md  QUICK_START.md  RELEASE_PROCESS.md  USE_CASES.md
docs/examples/: README.md  advanced-data-transformation-recipe.json  api-first-integration-recipe.json  basic-sync-recipe.json  batch-processing-recipe.json  file-processing-recipe.json  multi-application-workflow-recipe.json  real-time-bidirectional-sync-recipe.json  webhook-api-recipe.json
first_cp/: my_new_recipe.recipe.json
scripts/: parse_connection_docs.py  parse_picklist_docs.py
src/: .openapi-generator-ignore
src/.openapi-generator/: FILES
src/workato_platform/: __init__.py  _version.py
src/workato_platform/cli/: __init__.py  cli.py  containers.py
src/workato_platform/cli/commands/: api_collections.py  connections.py  data_tables.py  guide.py  init.py  profiles.py  properties.py  pull.py  push.py  workspace.py
src/workato_platform/cli/commands/connectors/: connector_manager.py
src/workato_platform/cli/commands/projects/: command.py  project_manager.py
src/workato_platform/cli/commands/recipes/: command.py  validator.py
src/workato_platform/cli/resources/docs/: connections-parameters.md  data-mapping.md  formulas.md  naming-conventions.md  recipe-deployment-workflow.md  triggers.md
src/workato_platform/cli/utils/: config.py  exception_handler.py  gitignore.py  ignore_patterns.py  spinner.py  version_checker.py
src/workato_platform/cli/utils/config/: __init__.py  manager.py  models.py  profiles.py  workspace.py
src/workato_platform/client/: workato_api_README.md
src/workato_platform/client/workato_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/workato_platform/client/workato_api/api/: __init__.py  api_platform_api.py  folders_api.py  projects_api.py  properties_api.py  recipes_api.py  users_api.py
src/workato_platform/client/workato_api/docs/: APIPlatformApi.md  ApiClientApiPoliciesInner.md  ApiClientCreateRequest.md  ApiCollection.md  ApiEndpoint.md  ApiKeyCreateRequest.md  AssetReference.md  Connection.md  ConnectionUpdateRequest.md  ConnectionsApi.md  ConnectorAction.md  ConnectorVersion.md  ConnectorsApi.md  CreateExportManifestRequest.md  CreateFolderRequest.md  CustomConnector.md  CustomConnectorCodeResponse.md  CustomConnectorCodeResponseData.md  DataTable.md  DataTableCreateRequest.md  DataTableCreateResponse.md  Error.md  ExportApi.md  ExportManifestRequest.md  ExportManifestResponse.md  FolderCreationResponse.md  FoldersApi.md  ImportResults.md  OAuthUrlResponse.md  OAuthUrlResponseData.md  PackageDetailsResponse.md  PackageResponse.md  PackagesApi.md  PicklistResponse.md  PlatformConnector.md  PlatformConnectorListResponse.md  Project.md  ProjectsApi.md  PropertiesApi.md  Recipe.md  (+9 more)
src/workato_platform/client/workato_api/models/: __init__.py  api_client.py  api_client_api_policies_inner.py  api_client_create_request.py  api_client_list_response.py  api_client_response.py  api_collection.py  api_key.py  api_key_create_request.py  api_key_response.py  connection_create_request.py  connection_update_request.py  connector_action.py  custom_connector.py  custom_connector_code_response.py  custom_connector_code_response_data.py  data_table.py  data_table_column.py  data_table_relation.py  delete_project403_response.py  error.py  export_manifest_request.py  folder_assets_response.py  folder_creation_response.py  (+14 more)
src/workato_platform_cli/: __init__.py  _version.py
src/workato_platform_cli/cli/: __init__.py  containers.py
src/workato_platform_cli/cli/commands/: api_clients.py  api_collections.py  assets.py  connections.py  data_tables.py  init.py  profiles.py  properties.py  pull.py  workspace.py
src/workato_platform_cli/cli/utils/: __init__.py  exception_handler.py  token_input.py  version_checker.py
src/workato_platform_cli/client/: workato_api_README.md
src/workato_platform_cli/client/workato_api/: __init__.py  api_client.py  configuration.py  rest.py
tests/: __init__.py  conftest.py
tests/e2e/: E2E_TEST_STATUS.md
tests/fixtures/: invalid_recipe.json  sample-python-recipe.recipe.json  sample_recipe.json
tests/integration/: test_connection_workflow.py  test_profile_workflow.py  test_recipe_workflow.py
tests/live/: README.md  __init__.py  conftest.py  helpers.py  test_connections_live.py  test_connectors_live.py  test_profiles_live.py  test_projects_live.py  test_recipes_live.py  test_workspace_live.py
tests/unit/: test_basic_imports.py  test_cli.py  test_config.py  test_containers.py  test_retry_429.py  test_version_checker.py  test_version_info.py  test_webbrowser_mock.py  test_workato_client.py
tests/unit/commands/: conftest.py  test_api_clients.py  test_api_collections.py  test_assets.py  test_connections.py  test_data_tables.py  test_guide.py  test_init.py  test_profiles.py  test_profiles_non_interactive.py  test_properties.py  test_pull.py  test_push.py  test_workspace.py
tests/unit/commands/connections/: test_commands.py  test_helpers.py
tests/unit/commands/connectors/: test_command.py  test_connector_manager.py
tests/unit/commands/data_tables/: test_command.py
tests/unit/commands/projects/: test_command.py  test_project_manager.py
tests/unit/commands/push/: test_command.py
tests/unit/commands/recipes/: test_command.py  test_validator.py
tests/unit/config/: test_manager.py  test_models.py  test_profiles.py  test_workspace.py
tests/unit/models/: __init__.py  test_asset.py  test_asset_reference.py
tests/unit/utils/: test_exception_handler.py  test_gitignore.py  test_ignore_patterns.py  test_spinner.py  test_token_input.py
(+318 files in other folders)
